--- a/index.html
+++ b/index.html
@@ -2,17 +2,78 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Meu Primeiro Site</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Meu Site</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #f4f4f4;
+      color: #333;
+    }
+
+    header {
+      background: #20232a;
+      color: white;
+      padding: 20px;
       text-align: center;
-      margin-top: 100px;
+    }
+
+    nav {
+      background: #61dafb;
+      padding: 10px;
+      text-align: center;
+    }
+
+    nav a {
+      color: #20232a;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 40px auto;
+      text-align: center;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      margin: 20px 0;
+    }
+
+    footer {
+      margin-top: 60px;
+      padding: 20px;
+      text-align: center;
+      background: #ddd;
     }
   </style>
 </head>
 <body>
-  <h1>Olá, mundo!</h1>
-  <p>Este site foi publicado com GitHub + Cloudflare Pages 🚀</p>
+  <header>
+    <h1>Bem-vindo ao Meu Site!</h1>
+  </header>
+
+  <nav>
+    <a href="index.html">Início</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="contato.html">Contato</a>
+  </nav>
+
+  <main>
+    <p>Esse site está sendo hospedado gratuitamente com GitHub + Cloudflare Pages!</p>
+    <img src="imagens/cachorro.png" alt="Um cachorro feliz">
+  </main>
+
+  <footer>
+    &copy; 2025 Meu Site. Todos os direitos reservados.
+  </footer>
 </body>
 </html>
