--- a/contato.html
+++ b/contato.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Fale conosco</h1>
-  <p>Você pode me encontrar no Instagram: @seuusuario</p>
+  <p>Você pode me encontrar por e-mail dog@cachorroroludo.com.br</p>
   <a href="index.html">Voltar para a página inicial</a>
 </body>
 </html>
