--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </nav>
 
   <main>
-    <p>Esse site está sendo hospedado gratuitamente com GitHub + Cloudflare Pages!</p>
+    <p>Esse site está sendo hospedado gratuitamente por dog@cachorroroludo.com.br</p>
     <img src="imagens/cachorro.png" alt="Um cachorro feliz">
   </main>
 
