--- a/index.html
+++ b/index.html
@@ -1,36 +1,67 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" data-theme="light">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Meu Site Responsivo</title>
   <style>
+    :root {
+      --bg-light: #f4f4f4;
+      --text-light: #333;
+      --header-light: #20232a;
+      --link-light: #20232a;
+      --nav-light: #61dafb;
+
+      --bg-dark: #121212;
+      --text-dark: #f5f5f5;
+      --header-dark: #1f1f1f;
+      --link-dark: #f5f5f5;
+      --nav-dark: #282c34;
+    }
+
+    [data-theme="light"] {
+      --bg: var(--bg-light);
+      --text: var(--text-light);
+      --header: var(--header-light);
+      --link: var(--link-light);
+      --nav: var(--nav-light);
+    }
+
+    [data-theme="dark"] {
+      --bg: var(--bg-dark);
+      --text: var(--text-dark);
+      --header: var(--header-dark);
+      --link: var(--link-dark);
+      --nav: var(--nav-dark);
+    }
+
     * {
       box-sizing: border-box;
+      transition: background 0.4s, color 0.4s;
     }
 
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f4f4f4;
-      color: #333;
+      background-color: var(--bg);
+      color: var(--text);
     }
 
     header {
-      background-color: #20232a;
-      color: white;
+      background-color: var(--header);
+      color: var(--text);
       padding: 20px 10px;
       text-align: center;
     }
 
     nav {
-      background-color: #61dafb;
+      background-color: var(--nav);
       padding: 10px;
       text-align: center;
     }
 
     nav a {
-      color: #20232a;
+      color: var(--link);
       margin: 0 15px;
       text-decoration: none;
       font-weight: bold;
@@ -45,19 +76,34 @@
       margin: 40px auto;
       padding: 0 20px;
       text-align: center;
+      animation: fadeIn 0.8s ease;
     }
 
     img {
       max-width: 100%;
       height: auto;
       margin-top: 20px;
+      border-radius: 12px;
+      box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
     }
 
     footer {
       margin-top: 60px;
       padding: 20px;
       text-align: center;
-      background-color: #ddd;
+      background-color: var(--nav);
+      color: var(--link);
+    }
+
+    .theme-toggle {
+      margin-top: 20px;
+      background: none;
+      border: 2px solid var(--link);
+      padding: 8px 16px;
+      color: var(--link);
+      cursor: pointer;
+      border-radius: 5px;
+      font-size: 16px;
     }
 
     @media (max-width: 600px) {
@@ -74,6 +120,11 @@
         font-size: 16px;
       }
     }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to   { opacity: 1; transform: translateY(0); }
+    }
   </style>
 </head>
 <body>
@@ -89,13 +140,23 @@
   </nav>
 
   <main>
-    <p>Este site se adapta a qualquer tamanho de tela! 📱💻</p>
-    <img src="imagens/cachorro.png" alt="Cachorro fofo">
+    <p>Este site tem tema escuro, animação e é 100% responsivo. 😎</p>
+    <img src="imagens/cachorro.png" alt="Cachorro bonito" />
+    <br>
+    <button class="theme-toggle" onclick="alternarTema()">Alternar Tema 🌗</button>
   </main>
 
   <footer>
     &copy; 2025 Meu Site. Todos os direitos reservados.
   </footer>
+
+  <script>
+    function alternarTema() {
+      const html = document.documentElement;
+      const temaAtual = html.getAttribute("data-theme");
+      html.setAttribute("data-theme", temaAtual === "light" ? "dark" : "light");
+    }
+  </script>
 
 </body>
 </html>
