--- a/index.html
+++ b/index.html
@@ -179,5 +179,31 @@
     });
   </script>
 
+
+<a href="https://wa.me/5547991892577?text=Olá!%20Acessei%20seu%20site%20e%20quero%20falar%20com%20você" target="_blank" id="whatsapp-float">
+  💬
+</a>
+
+<style>
+  #whatsapp-float {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #25D366;
+    color: white;
+    font-size: 24px;
+    text-align: center;
+    border-radius: 50%;
+    padding: 12px 16px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    text-decoration: none;
+    z-index: 9999;
+    transition: transform 0.3s ease;
+  }
+
+  #whatsapp-float:hover {
+    transform: scale(1.1);
+  }
+</style>
 </body>
 </html>
