--- a/contato.html
+++ b/contato.html
@@ -8,71 +8,54 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #f4f4f4;
-      padding: 30px;
       color: #333;
+      text-align: center;
+      padding: 60px 20px;
     }
 
     h1 {
-      text-align: center;
+      font-size: 28px;
+      margin-bottom: 20px;
     }
 
-    form {
-      max-width: 500px;
-      margin: 30px auto;
-      background: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    p {
+      font-size: 18px;
+      margin-bottom: 30px;
     }
 
-    input, textarea, button {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-    }
-
-    button {
-      background-color: #61dafb;
-      color: #20232a;
-      font-weight: bold;
-      border: none;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #21a1f1;
-    }
-
-    .back-link {
-      text-align: center;
-      margin-top: 20px;
-    }
-
-    .back-link a {
+    a.email-link {
+      display: inline-block;
+      font-size: 18px;
       color: #20232a;
       text-decoration: none;
+      font-weight: bold;
+      background: #61dafb;
+      padding: 10px 20px;
+      border-radius: 8px;
+      transition: background 0.3s ease;
+    }
+
+    a.email-link:hover {
+      background: #21a1f1;
+    }
+
+    a.voltar {
+      display: block;
+      margin-top: 40px;
+      text-decoration: none;
+      color: #20232a;
+      font-size: 16px;
     }
   </style>
 </head>
 <body>
 
-  <h1>Entre em Contato</h1>
+  <h1>Fale com a gente 🐶</h1>
+  <p>Você pode entrar em contato direto por e-mail:</p>
 
-  <form action="https://formsubmit.co/dog@cachorroroludo.com.br" method="POST">
-    <input type="text" name="nome" placeholder="Seu nome" required>
-    <input type="email" name="email" placeholder="Seu e-mail" required>
-    <textarea name="mensagem" rows="5" placeholder="Digite sua mensagem" required></textarea>
-    <button type="submit">Enviar</button>
-    <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_next" value="https://www.instagram.com/skankhunt_4200_00/">
-  </form>
+  <a class="email-link" href="mailto:dog@cachorroroludo.com.br">Enviar e-mail para dog@cachorroroludo.com.br</a>
 
-  <div class="back-link">
-    <a href="index.html">← Voltar para o início</a>
-  </div>
+  <a class="voltar" href="index.html">← Voltar para o início</a>
 
 </body>
 </html>
