--- a/contato.html
+++ b/contato.html
@@ -23,7 +23,7 @@
       margin-bottom: 30px;
     }
 
-    a.email-link {
+    a.button-link {
       display: inline-block;
       font-size: 18px;
       color: #20232a;
@@ -33,9 +33,10 @@
       padding: 10px 20px;
       border-radius: 8px;
       transition: background 0.3s ease;
+      margin: 10px;
     }
 
-    a.email-link:hover {
+    a.button-link:hover {
       background: #21a1f1;
     }
 
@@ -51,9 +52,11 @@
 <body>
 
   <h1>Fale com a gente 🐶</h1>
-  <p>Você pode entrar em contato direto por e-mail:</p>
+  <p>Você pode nos encontrar por aqui:</p>
 
-  <a class="email-link" href="mailto:dog@cachorroroludo.com.br">Enviar e-mail para dog@cachorroroludo.com.br</a>
+  <a class="button-link" href="mailto:dog@cachorroroludo.com.br">Enviar e-mail para dog@cachorroroludo.com.br</a>
+  <br>
+  <a class="button-link" href="https://www.instagram.com/skankhunt_4200_00/" target="_blank">Nosso Instagram</a>
 
   <a class="voltar" href="index.html">← Voltar para o início</a>
 
