--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <body>
 
   <header>
-    <h1>Bem-vindo ao Meu Site Responsivo!</h1>
+    <h1>Prazer! Cão Roludo!</h1>
   </header>
 
   <nav>
@@ -149,14 +149,14 @@
   </nav>
 
   <main>
-    <p>Este site tem tema escuro, imagem otimizada e responsividade total. 😎</p>
+    <p>Me conte como você me achou?. 😎</p>
     <img src="imagens/cachorro.png" alt="Cachorro bonito" loading="lazy" />
     <br>
     <button class="theme-toggle" onclick="alternarTema()">Alternar Tema 🌗</button>
   </main>
 
   <footer>
-    &copy; 2025 Meu Site. Todos os direitos reservados.
+    &copy; 2025 Cebosão. Todos os direitos reservados.
   </footer>
 
   <script>
