--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   </nav>
 
   <main>
-    <p>Me conte como você me achou?. 😎</p>
+    <p>Me conte, como você me achou? 😎</p>
     <img src="imagens/cachorro.png" alt="Cachorro bonito" loading="lazy" />
     <br>
     <button class="theme-toggle" onclick="alternarTema()">Alternar Tema 🌗</button>
