--- a/index.html
+++ b/index.html
@@ -3,28 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ceboso</title>
+  <title>Prazer! Cão Roludo!</title>
   <style>
     :root {
-      --bg-light: #f4f4f4;
-      --text-light: #333;
-      --header-light: #20232a;
-      --link-light: #20232a;
-      --nav-light: #61dafb;
-
       --bg-dark: #121212;
       --text-dark: #f5f5f5;
       --header-dark: #1f1f1f;
       --link-dark: #f5f5f5;
       --nav-dark: #282c34;
-    }
-
-    [data-theme="light"] {
-      --bg: var(--bg-light);
-      --text: var(--text-light);
-      --header: var(--header-light);
-      --link: var(--link-light);
-      --nav: var(--nav-light);
+      --accent: #61dafb;
     }
 
     [data-theme="dark"] {
@@ -37,7 +24,7 @@
 
     * {
       box-sizing: border-box;
-      transition: background 0.4s, color 0.4s;
+      transition: background 0.3s, color 0.3s;
     }
 
     body {
@@ -50,25 +37,42 @@
     header {
       background-color: var(--header);
       color: var(--text);
-      padding: 20px 10px;
+      padding: 20px;
       text-align: center;
     }
 
-    nav {
+    /* NAVBAR ESTILOSA */
+    .navbar {
       background-color: var(--nav);
-      padding: 10px;
+      padding: 12px 20px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
       text-align: center;
     }
 
-    nav a {
-      color: var(--link);
+    .navbar ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    .navbar li {
+      display: inline-block;
       margin: 0 15px;
+    }
+
+    .navbar a {
+      color: var(--accent);
       text-decoration: none;
       font-weight: bold;
+      font-size: 18px;
+      padding: 8px 14px;
+      border-radius: 6px;
+      transition: background 0.3s, color 0.3s;
     }
 
-    nav a:hover {
-      text-decoration: underline;
+    .navbar a:hover {
+      background-color: var(--accent);
+      color: var(--bg);
     }
 
     main {
@@ -92,6 +96,17 @@
       animation: aparecer 0.6s ease forwards;
     }
 
+    .theme-toggle {
+      margin-top: 20px;
+      background: none;
+      border: 2px solid var(--accent);
+      padding: 8px 16px;
+      color: var(--accent);
+      cursor: pointer;
+      border-radius: 5px;
+      font-size: 16px;
+    }
+
     footer {
       margin-top: 60px;
       padding: 20px;
@@ -100,19 +115,39 @@
       color: var(--link);
     }
 
-    .theme-toggle {
-      margin-top: 20px;
-      background: none;
-      border: 2px solid var(--link);
-      padding: 8px 16px;
-      color: var(--link);
-      cursor: pointer;
-      border-radius: 5px;
-      font-size: 16px;
+    /* ANIMAÇÕES */
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to   { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes aparecer {
+      to { opacity: 1; }
+    }
+
+    /* WHATSAPP BUTTON */
+    #whatsapp-float {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25D366;
+      color: white;
+      font-size: 24px;
+      text-align: center;
+      border-radius: 50%;
+      padding: 12px 16px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      text-decoration: none;
+      z-index: 9999;
+      transition: transform 0.3s ease;
+    }
+
+    #whatsapp-float:hover {
+      transform: scale(1.1);
     }
 
     @media (max-width: 600px) {
-      nav a {
+      .navbar li {
         display: block;
         margin: 10px 0;
       }
@@ -125,15 +160,6 @@
         font-size: 16px;
       }
     }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to   { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes aparecer {
-      to { opacity: 1; }
-    }
   </style>
 </head>
 <body>
@@ -142,10 +168,12 @@
     <h1>Prazer! Cão Roludo!</h1>
   </header>
 
-  <nav>
-    <a href="index.html">Início</a>
-    <a href="sobre.html">Sobre</a>
-    <a href="contato.html">Contato</a>
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Início</a></li>
+      <li><a href="sobre.html">Blog</a></li>
+      <li><a href="contato.html">Contato</a></li>
+    </ul>
   </nav>
 
   <main>
@@ -182,28 +210,6 @@
   <a href="https://wa.me/5547991892577?text=Olá!%20Acessei%20seu%20site%20e%20quero%20falar%20com%20você" target="_blank" id="whatsapp-float">
     💬
   </a>
-
-  <style>
-    #whatsapp-float {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background-color: #25D366;
-      color: white;
-      font-size: 24px;
-      text-align: center;
-      border-radius: 50%;
-      padding: 12px 16px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-      text-decoration: none;
-      z-index: 9999;
-      transition: transform 0.3s ease;
-    }
-
-    #whatsapp-float:hover {
-      transform: scale(1.1);
-    }
-  </style>
 
 </body>
 </html>
