--- a/contato.html
+++ b/contato.html
@@ -56,7 +56,7 @@
 
   <a class="button-link" href="mailto:dog@cachorroroludo.com.br">Enviar e-mail para dog@cachorroroludo.com.br</a>
   <br>
-  <a class="button-link" href="https://www.instagram.com/skankhunt_4200_00/" target="_blank">Nosso Instagram</a>
+  <a class="button-link" href="https://www.instagram.com/" target="_blank">Nosso Instagram</a>
 
   <a class="voltar" href="index.html">← Voltar para o início</a>
 
