--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   <nav class="navbar">
     <ul>
       <li><a href="index.html">Início</a></li>
-      <li><a href="sobre.html">Blog</a></li>
+      <li><a href="sobre.html">Sobre</a></li>
       <li><a href="contato.html">Contato</a></li>
     </ul>
   </nav>
