--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
       text-align: center;
     }
 
-    /* NAVBAR ESTILOSA */
     .navbar {
       background-color: var(--nav);
       padding: 12px 20px;
@@ -115,7 +114,6 @@
       color: var(--link);
     }
 
-    /* ANIMAÇÕES */
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to   { opacity: 1; transform: translateY(0); }
@@ -125,7 +123,6 @@
       to { opacity: 1; }
     }
 
-    /* WHATSAPP BUTTON */
     #whatsapp-float {
       position: fixed;
       bottom: 20px;
@@ -178,6 +175,7 @@
 
   <main>
     <p>Me conte, como você me achou? 😎</p>
+    <p>Seu IP: <span id="ip-address">Carregando...</span></p>
     <img src="imagens/cachorro.png" alt="Cachorro bonito" loading="lazy" />
     <br>
     <button class="theme-toggle" onclick="alternarTema()">Alternar Tema 🌗</button>
@@ -205,6 +203,15 @@
         }
       });
     });
+
+    fetch('https://api.ipify.org?format=json')
+      .then(response => response.json())
+      .then(data => {
+        document.getElementById('ip-address').textContent = data.ip;
+      })
+      .catch(() => {
+        document.getElementById('ip-address').textContent = 'Erro ao obter IP';
+      });
   </script>
 
   <a href="https://wa.me/5547991892577?text=Olá!%20Acessei%20seu%20site%20e%20quero%20falar%20com%20você" target="_blank" id="whatsapp-float">
