--- a/index.html
+++ b/index.html
@@ -66,13 +66,20 @@
     }
 
     img.main-img {
-      max-width: 100%;
-      height: auto;
       display: block;
       margin: 20px auto;
+      width: 100%;
+      max-width: 300px;
+      height: auto;
       border: 4px solid lime;
       border-radius: 8px;
       box-shadow: 0 0 20px green;
+      transition: transform 0.6s ease-in-out;
+      cursor: pointer;
+    }
+
+    img.main-img:hover {
+      transform: rotate(720deg) scale(1.2);
     }
   </style>
 </head>
