--- a/index.html
+++ b/index.html
@@ -74,12 +74,13 @@
       border: 4px solid lime;
       border-radius: 8px;
       box-shadow: 0 0 20px green;
-      transition: transform 0.6s ease-in-out;
+      animation: rotateDog 5s linear infinite;
       cursor: pointer;
     }
 
-    img.main-img:hover {
-      transform: rotate(720deg) scale(1.2);
+    @keyframes rotateDog {
+      from { transform: rotate(0deg); }
+      to   { transform: rotate(360deg); }
     }
   </style>
 </head>
@@ -98,7 +99,7 @@
           Seu IP: <span id="ip-address" class="blinking">Carregando...</span>
         </div>
 
-        <img src="imagens/cachorro.png" alt="Cachorro bonito" class="main-img" />
+        <img src="imagens/cachorro.png" alt="Cachorro bonito" class="main-img" id="dog-image" />
 
         <div class="nav-links">
           <a href="index.html">Início</a> |
@@ -117,7 +118,14 @@
     <p style="color: gray;">&copy; 1996 Cebosão Web Productions. Todos os direitos reservados.</p>
   </center>
 
+  <!-- Som de latido -->
+  <audio id="latido">
+    <source src="https://www.fesliyanstudios.com/play-mp3/6877" type="audio/mpeg">
+    Seu navegador não suporta áudio.
+  </audio>
+
   <script>
+    // IP do visitante
     fetch('https://api.ipify.org?format=json')
       .then(res => res.json())
       .then(data => {
@@ -126,6 +134,11 @@
       .catch(() => {
         document.getElementById('ip-address').textContent = "Erro ao carregar IP";
       });
+
+    // Som de latido ao clicar na imagem
+    document.getElementById('dog-image').addEventListener('click', function() {
+      document.getElementById('latido').play();
+    });
   </script>
 
 </body>
