--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
     </tr>
   </table>
 
+  <!-- Contador de visitas fake -->
+  <div style="text-align: center; margin: 30px auto;">
+    <p style="color: cyan;">Você é o visitante número:</p>
+    <img src="https://www.webfreecounter.com/hit.php?id=gepxnpck&nd=6&style=71" alt="Contador de Visitas">
+  </div>
+
   <center>
     <p style="color: gray;">&copy; 1996 Cebosão Web Productions. Todos os direitos reservados.</p>
   </center>
