--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
     <p style="color: gray;">&copy; 1996 Cebosão Web Productions. Todos os direitos reservados.</p>
   </center>
 
-  <!-- Som de latido -->
+  <!-- Som de latido (CORS liberado) -->
   <audio id="latido" preload="auto">
-    <source src="https://www.soundjay.com/animal/dog-bark-1.mp3" type="audio/mpeg">
+    <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_799b9fb50c.mp3?filename=dog-barking-38536.mp3" type="audio/mpeg">
     Seu navegador não suporta áudio.
   </audio>
 
