--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Prazer! Cão Roludo!</title>
+  <!-- Favicon icônico (doge clássico) -->
+  <link rel="icon" href="https://emoji.gg/assets/emoji/7293-doge.png" type="image/png">
   <style>
     body {
       background-image: url('https://www.transparenttextures.com/patterns/asfalt-dark.png');
