--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
 
         <center>
-          <img src="https://www.animatedimages.org/data/media/71/animated-under-construction-image-0001.gif" class="gif" alt="Em construção">
+          <img src="https://raw.githubusercontent.com/naptha/txt2gif/master/demo/under-construction.gif" class="gif" alt="Em construção">
         </center>
       </td>
     </tr>
