--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
     img.main-img:hover {
       transform: rotate(720deg) scale(1.2);
     }
+
+    /* Dancing Baby fixado no canto inferior esquerdo */
+    .corner-baby {
+      position: fixed;
+      bottom: 10px;
+      left: 10px;
+      width: 100px;
+      z-index: 999;
+    }
   </style>
 </head>
 <body>
@@ -102,7 +111,6 @@
           <a href="sobre.html">Sobre</a> |
           <a href="contato.html">Contato</a>
         </div>
-
       </td>
     </tr>
   </table>
@@ -110,6 +118,9 @@
   <center>
     <p style="color: gray;">&copy; 1996 Cebosão Web Productions. Todos os direitos reservados.</p>
   </center>
+
+  <!-- GIF do Dancing Baby no canto inferior esquerdo -->
+  <img src="IMG_1611.GIF" alt="Dancing Baby" class="corner-baby">
 
   <script>
     // Mostrar IP do visitante
