--- a/index.html
+++ b/index.html
@@ -124,7 +124,150 @@
 
   <script>
     // Mostrar IP do visitante
+    fetch('https://api.ipify.org?format=json')<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Prazer! Cão Roludo!</title>
+  <!-- Favicon icônico (doge clássico) -->
+  <link rel="icon" href="https://emoji.gg/assets/emoji/7293-doge.png" type="image/png">
+  <style>
+    body {
+      background-image: url('https://www.transparenttextures.com/patterns/asfalt-dark.png');
+      background-color: black;
+      color: lime;
+      font-family: "Courier New", Courier, monospace;
+    }
+
+    table {
+      margin: 40px auto;
+      width: 90%;
+      border: 3px double yellow;
+      background-color: #000033;
+    }
+
+    td {
+      position: relative; /* necessário para posicionar o baby dentro */
+      padding-bottom: 60px; /* espaço extra para não sobrepor conteúdo */
+    }
+
+    h1, h2 {
+      text-align: center;
+      color: cyan;
+    }
+
+    marquee {
+      color: red;
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    a {
+      color: yellow;
+      text-decoration: underline;
+      font-weight: bold;
+    }
+
+    .ip-box {
+      margin-top: 20px;
+      background-color: navy;
+      color: white;
+      padding: 10px;
+      font-size: 18px;
+      border: 2px dashed cyan;
+      text-align: center;
+    }
+
+    .blinking {
+      animation: blink 1s infinite;
+    }
+
+    @keyframes blink {
+      0% { opacity: 1; }
+      50% { opacity: 0; }
+      100% { opacity: 1; }
+    }
+
+    .nav-links {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    img.main-img {
+      display: block;
+      margin: 20px auto;
+      width: 100%;
+      max-width: 300px;
+      height: auto;
+      border: 4px solid lime;
+      border-radius: 8px;
+      box-shadow: 0 0 20px green;
+      transition: transform 0.6s ease-in-out;
+      cursor: pointer;
+    }
+
+    img.main-img:hover {
+      transform: rotate(720deg) scale(1.2);
+    }
+
+    /* Dancing Baby dentro do retângulo */
+    .corner-baby {
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+      width: 100px;
+      z-index: 10;
+    }
+  </style>
+</head>
+<body>
+
+  <marquee behavior="alternate">💾 Bem-vindo à Página Oficial do Cão Roludo! 🐶</marquee>
+
+  <table>
+    <tr>
+      <td>
+        <h1>Prazer! Cão Roludo!</h1>
+
+        <h2>Me conte, como você me achou? 😎</h2>
+
+        <div class="ip-box" id="ip-container">
+          Seu IP: <span id="ip-address" class="blinking">Carregando...</span>
+        </div>
+
+        <img src="imagens/cachorro.png" alt="Cachorro bonito" class="main-img" id="dog-image" />
+
+        <div class="nav-links">
+          <a href="index.html">Início</a> |
+          <a href="sobre.html">Sobre</a> |
+          <a href="contato.html">Contato</a>
+        </div>
+
+        <!-- Dancing Baby DENTRO do retângulo, no canto inferior esquerdo -->
+        <img src="IMG_1611.GIF" alt="Dancing Baby" class="corner-baby">
+      </td>
+    </tr>
+  </table>
+
+  <center>
+    <p style="color: gray;">&copy; 1996 Cebosão Web Productions. Todos os direitos reservados.</p>
+  </center>
+
+  <script>
+    // Mostrar IP do visitante
     fetch('https://api.ipify.org?format=json')
+      .then(res => res.json())
+      .then(data => {
+        document.getElementById('ip-address').textContent = data.ip;
+      })
+      .catch(() => {
+        document.getElementById('ip-address').textContent = "Erro ao carregar IP";
+      });
+  </script>
+
+</body>
+</html>
+
       .then(res => res.json())
       .then(data => {
         document.getElementById('ip-address').textContent = data.ip;
